[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/clickable_object.gd" type="Script" id=1]

[node name="ClickableObject" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["collisions"]]

[node name="ApproachPosition" type="Position2D" parent="."]
position = Vector2( 0, -20 )

[node name="Sprite" type="Sprite" parent="."]

[node name="SpriteSecondary" type="Sprite" parent="."]
visible = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
